2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-09-22  Andreas Kupries  <andreask@activestate.com>

	* ftp.tcl (::ftp::NList): Fixed [SF Tcllib Bug 1563137] using the
	* ftp.man:       patch submitted by Keith Vetter
	* pkgIndex.tcl: <keithv@users.sourceforge.net> as part of his
	  report. Bumped version to 2.4.4 See also the duplicate entry
	  [SF Tcllib Bug 1553919]. And also [SF Tcllib Bug 748758].

2006-09-19  Andreas Kupries  <andreask@activestate.com>

	* ftp.man: Bumped version to 2.4.3
	* ftp.tcl:
	* pkgIndex.tcl:

2006-06-13  Andreas Kupries <andreask@activestate.com>

	* ftp.tcl (::ftp::StateHandler): Replaced use of 8.4ism (expr 'ne'
	  operator) with appropriate invokation of 'string equal'. This
	  fixes [SF Tcllib Bug 1429377], reported by John Mercogliano III.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-02-14  Andreas Kupries <andreask@activestate.com>

	* ftp.tcl (::ftp::StateHandler): Accepted patch by Keith Vetter
	  <keithv@users.sourceforge.net> for [SF Tcllib Bug 1076923], also
	  reported by him. This fixes a race condition where the client
	  has sent QUIT and is waiting for response, but gets the socket
	  closed without any.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2003-12-01  Andreas Kupries  <andreask@activestate.com>

	* ftp.tcl (ftp::StateHandler): See last entry. The condition to
	  invoke a report for a failure of the regex was wrong, and